# visualgen-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/visualgen/: SKILL.md
.claude/skills/visualgen/reference/: cost-cheatsheet.md  prompt-anatomy.md
.claude/skills/visualgen/templates/: background-loop.md  hero-image.md  hero-video.md  illustration.md  og-social-card.md  product-shot.md
.github/workflows/: ci.yml
docs/plans/: 2026-04-22-profile-wizard-design.md  2026-04-22-profile-wizard.md  2026-04-22-visualgen-skill-design.md  2026-04-22-visualgen-skill.md
src/visualgen_mcp/: __init__.py  __main__.py  config.py  jobs.py  profile.py  server.py  wizard.py
src/visualgen_mcp/providers/: imagen.py  veo.py
tests/: test_config.py  test_jobs.py  test_profile.py  test_providers.py  test_skill_frontmatter.py  test_wizard.py
tests/integration/: README.md
